[gd_scene load_steps=3 format=3 uid="uid://55w2gkaloggb"]

[ext_resource type="Script" path="res://enlynn/Button1.gd" id="1_masty"]
[ext_resource type="Script" path="res://enlynn/Button2.gd" id="2_0py2e"]

[node name="TestButtons" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="Button" type="Button" parent="."]
offset_right = 161.0
offset_bottom = 114.0
text = "Server"
script = ExtResource("1_masty")

[node name="Button2" type="Button" parent="."]
offset_left = 169.0
offset_top = 2.0
offset_right = 345.0
offset_bottom = 115.0
text = "Client"
script = ExtResource("2_0py2e")

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_pressed"]
